feat(add ) : add coment

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,6 +19,7 @@
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root",
+	// หิวข้าวคนับ
 	"customizations": {
 		"vscode": {
 			"extensions": [
