feat(lang): add Polish languag.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,7 @@
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root",
 	// หิวข้าวคนับ
-
+	//lolo
 	// thanathip
 	"customizations": {
 		"vscode": {
